--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -1,7 +1,5 @@
 // USER VARIABLES SECTION
 
-$accent: orange // Accent Color
-$textcolor: #333 // Text Color
 $fontsize: 10px // Body Font Size
 $lineheight: 1.8 // Document Line Height
 $userfont: Overpass, sans-serif // User Font Family
@@ -27,12 +25,9 @@ $gutter: $grid-gutter-width
 
 // GENERAL CSS SETTINGS
 
-::placeholder
-	color: #666
-
 ::selection
-	background-color: $accent
-	color: #fff
+	background-color: var(--bg-red-salsa)
+	color: var(--text-white)
 
 :root
 	--bg-white: hsl(0, 0%, 100%)
