--- a/app/styles/sass/blocks/_general.sass
+++ b/app/styles/sass/blocks/_general.sass
@@ -67,6 +67,11 @@
 	object-fit: cover
 	transition: var(--transition-2)
 
+.img-holder
+	aspect-ratio: var(--width) / var(--height)
+	background-color: var(--bg-gainsboro)
+	overflow: hidden
+
 .w-100
 	width: 100%
 
